[project]
name = "mema-bricks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pygame-ce>=2.5.3"]

[project.optional-dependencies]

[dependency-groups]
dev = ["ruff>=0.9.7"]
package-to-exe = ["pyinstaller>=6.12.0"]

[tool.ruff]
line-length = 120
target-version = "py312"
